--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -41,6 +41,10 @@
                     android:paddingEnd="8dp"
                     android:paddingTop="4dp">
 
+                    <com.google.android.material.divider.MaterialDivider
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
                     <TextView
                         android:id="@+id/tvProfile"
                         android:layout_width="match_parent"
