--- a/app/src/main/res/layout/activity_add_availability.xml
+++ b/app/src/main/res/layout/activity_add_availability.xml
@@ -59,15 +59,29 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="12dp"
+            android:focusableInTouchMode="true"
+            android:focusable="true"
             android:hint="Agregar Hora"
             app:startIconDrawable="@drawable/baseline_watch_later_24">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etAddHour"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:focusable="false"/>
 
         </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/btnAddAvailability"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Guardar turno"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            style="?attr/materialButtonOutlinedStyle"
+            />
 
     </LinearLayout>
 
