--- a/app/src/main/res/layout/activity_add_availability.xml
+++ b/app/src/main/res/layout/activity_add_availability.xml
@@ -94,6 +94,7 @@
         android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvAvailabilityList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:listitem="@layout/item_availability"
