--- a/app/src/main/res/layout/activity_add_availability.xml
+++ b/app/src/main/res/layout/activity_add_availability.xml
@@ -80,14 +80,42 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <Button
-                android:id="@+id/btnAddAvailability"
-                style="?attr/materialButtonOutlinedStyle"
-                android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
                 android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:text="Guardar turno" />
+                android:paddingBottom="12dp"
+                android:paddingTop="12dp"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/btnAddAvailability"
+                    style="?attr/materialButtonOutlinedStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:text="Guardar turno" />
+
+
+                <Button
+                    android:id="@+id/btnSaveService"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:text="Publicar servicio" />
+            </LinearLayout>
+
+
 
         </LinearLayout>
 
@@ -125,16 +153,6 @@
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
-
-        <Button
-            android:id="@+id/btnSaveService"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="Publicar servicio" />
 
     </LinearLayout>
 
