--- a/app/src/main/res/layout/item_service_home.xml
+++ b/app/src/main/res/layout/item_service_home.xml
@@ -13,6 +13,8 @@
 
         <!-- Media -->
         <ImageView
+            android:layout_marginTop="8dp"
+            android:id="@+id/ivServiceHome"
             android:layout_width="match_parent"
             android:layout_height="194dp"
             app:srcCompat="@drawable/logo"
