--- a/app/src/main/res/layout/item_service_home.xml
+++ b/app/src/main/res/layout/item_service_home.xml
@@ -11,14 +11,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!-- Media -->
         <ImageView
-            android:layout_marginTop="8dp"
             android:id="@+id/ivServiceHome"
             android:layout_width="match_parent"
             android:layout_height="194dp"
             app:srcCompat="@drawable/logo"
             android:scaleType="fitCenter"
+            android:layout_margin="8dp"
+            android:background="@drawable/border_radius_image"
             />
 
         <LinearLayout
@@ -33,15 +33,6 @@
                 android:layout_height="wrap_content"
                 android:text="Title"
                 android:textAppearance="?attr/textAppearanceHeadline6"
-                />
-            <TextView
-                android:id="@+id/tvDescription"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="description"
-                android:textAppearance="?attr/textAppearanceBody2"
-                android:textColor="?android:attr/textColorSecondary"
                 />
 
         </LinearLayout>
