--- a/app/src/main/res/layout/activity_deatil_service.xml
+++ b/app/src/main/res/layout/activity_deatil_service.xml
@@ -7,54 +7,93 @@
     android:orientation="vertical"
     tools:context=".ui.view.DetailServiceActivity">
 
-    <ImageView
-        android:id="@+id/ivHeader"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.3"
-        android:src="@drawable/logo"
-        android:scaleType="fitCenter"/>
-
     <LinearLayout
+        android:id="@+id/llBody"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.7"
-        android:layout_margin="8dp"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvLocation"
+        <ImageView
+            android:id="@+id/ivHeader"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Location"
-            android:textSize="20sp"
-            android:textStyle="italic"
-            android:drawableRight="@drawable/baseline_location_on_24"
-            android:textAlignment="textEnd"/>
+            android:layout_height="0dp"
+            android:layout_weight="0.3"
+            android:src="@drawable/logo"
+            android:scaleType="fitCenter"/>
 
-        <TextView
-            android:id="@+id/tvTitle"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Title"
-            android:textStyle="bold"
-            android:textSize="26sp" />
+            android:layout_height="0dp"
+            android:layout_weight="0.7"
+            android:layout_margin="8dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvDescription"
-            android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/tvLocation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Location"
+                android:textSize="20sp"
+                android:textStyle="italic"
+                android:drawableRight="@drawable/baseline_location_on_24"
+                android:textAlignment="textEnd"/>
+
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Title"
+                android:textStyle="bold"
+                android:textSize="26sp" />
+
+            <TextView
+                android:id="@+id/tvDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Description"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btnRequestService"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="Description"
-            android:textSize="20sp" />
+            android:text="Solicitar servicio"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="8dp"/>
+
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btnRequestService"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Solicitar servicio"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="8dp"/>
+
+
+    <LinearLayout
+        android:id="@+id/ly_progress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/tv_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cargando..."
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            android:textStyle="bold" />
+
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            app:indicatorSize="60dp" />
+    </LinearLayout>
 
 </LinearLayout>
