add change states of request

--- a/app/src/main/res/layout/item_requests_received.xml
+++ b/app/src/main/res/layout/item_requests_received.xml
@@ -15,6 +15,7 @@
             android:orientation="vertical"
             android:layout_margin="8dp">
             <TextView
+                android:id="@+id/tvSolicitedService"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Servicio solicitado:"
@@ -22,22 +23,25 @@
                 android:textColor="@color/black"
                 android:textSize="20sp" />
             <TextView
+                android:id="@+id/tvRequestingUser"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Ususario solicitante:"
                 android:textSize="16sp" />
 
             <TextView
+                android:id="@+id/tvState"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Estado:"
                 android:textSize="16sp" />
 
             <LinearLayout
-                android:id="@+id/llButtons"
+                android:id="@+id/llButtonsPending"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 android:layout_marginTop="8dp">
 
                 <Button
@@ -61,6 +65,23 @@
                     android:text="Rechazar"
                     android:layout_gravity="center_horizontal" />
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/llBtnAccepted"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <Button
+                    android:id="@+id/btnFinishService"
+                    android:layout_width="wrap_content"
+                    android:backgroundTint="#C60707"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:text="Finalizar servicio"
+                    android:layout_gravity="end" />
             </LinearLayout>
 
         </LinearLayout>
