--- a/app/src/main/res/layout/fragment_my_service.xml
+++ b/app/src/main/res/layout/fragment_my_service.xml
@@ -54,4 +54,20 @@
             app:indicatorSize="60dp" />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/llEmptyView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="italic"
+            android:layout_gravity="center"
+            android:text="No tienen ningun servicio publicado" />
+    </LinearLayout>
 </FrameLayout>
