--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -91,6 +91,21 @@
                         android:layout_height="wrap_content"/>
 
                     <TextView
+                        android:id="@+id/tvHiredServices"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text=" Servicios contratados"
+                        android:drawableLeft="@drawable/baseline_history_24"
+                        android:textSize="18sp"
+                        android:paddingTop="6dp"
+                        android:paddingBottom="6dp"
+                        android:layout_gravity="center_vertical"/>
+
+                    <com.google.android.material.divider.MaterialDivider
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
                         android:id="@+id/tvSignOut"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
