--- a/app/src/main/res/layout/activity_edit_my_service.xml
+++ b/app/src/main/res/layout/activity_edit_my_service.xml
@@ -7,77 +7,112 @@
     android:orientation="vertical"
     tools:context=".ui.view.DetailServiceActivity">
 
-    <ImageView
-        android:id="@+id/ivHeader"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.3"
-        android:src="@drawable/logo"
-        android:scaleType="fitCenter"/>
-
     <LinearLayout
+        android:id="@id/llBody"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.6"
-        android:layout_margin="8dp"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvLocation"
+        <ImageView
+            android:id="@+id/ivHeader"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Location"
-            android:textSize="20sp"
-            android:textStyle="italic"
-            android:drawableRight="@drawable/baseline_location_on_24"
-            android:textAlignment="textEnd"/>
+            android:layout_height="0dp"
+            android:layout_weight="0.3"
+            android:src="@drawable/logo"
+            android:scaleType="fitCenter"/>
 
-        <TextView
-            android:id="@+id/tvTitle"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Title"
-            android:textStyle="bold"
-            android:textSize="26sp" />
+            android:layout_height="0dp"
+            android:layout_weight="0.6"
+            android:layout_margin="8dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvDescription"
+            <EditText
+                android:id="@+id/etLocation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Location"
+                android:textSize="20sp"
+                android:textStyle="italic"
+                android:drawableRight="@drawable/baseline_location_on_24"
+                android:textAlignment="textEnd"/>
+
+            <EditText
+                android:id="@+id/etTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Title"
+                android:textStyle="bold"
+                android:textSize="26sp" />
+
+            <EditText
+                android:id="@+id/etDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Description"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="Description"
-            android:textSize="20sp" />
+            android:layout_height="0dp"
+            android:layout_weight="0.1"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnEditService"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:text="Editar"
+                android:layout_gravity="center_horizontal" />
+
+            <Button
+                android:id="@+id/btnDeleteService"
+                android:layout_width="0dp"
+                android:backgroundTint="#C60707"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:text="Eliminar"
+                android:layout_gravity="center_horizontal" />
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ly_progress"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.1"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/btnEditService"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/tv_progress"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:text="Editar"
-            android:layout_gravity="center_horizontal" />
+            android:text="Cargando..."
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/btnDeleteService"
-            android:layout_width="0dp"
-            android:backgroundTint="#C60707"
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:text="Eliminar"
-            android:layout_gravity="center_horizontal" />
+            android:indeterminate="true"
+            app:indicatorSize="60dp" />
     </LinearLayout>
-
-
 
 </LinearLayout>
