--- a/app/src/main/res/layout/activity_deatil_service.xml
+++ b/app/src/main/res/layout/activity_deatil_service.xml
@@ -14,6 +14,14 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/ivFavorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|top"
+            android:src="@drawable/start_border"
+            android:layout_margin="16dp" />
+
+        <ImageView
             android:id="@+id/ivHeader"
             android:layout_width="match_parent"
             android:layout_height="0dp"
