--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="primary_color">#6750a4</color>
     <color name="purple">#8692f7</color>
     <color name="grey">#9A9A9A</color>
+    <color name="isFavorite">#CCBD01</color>
 </resources>
