--- a/app/src/main/res/layout/activity_edit_my_service.xml
+++ b/app/src/main/res/layout/activity_edit_my_service.xml
@@ -53,6 +53,46 @@
                 android:layout_marginTop="8dp"
                 android:text="Description"
                 android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tvAppreciations"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginBottom="12dp"
+                android:drawableStart="@drawable/expand_more"
+                android:gravity="center_vertical"
+                android:text="Mostrar valoraciones"
+                android:textColor="@color/primary_color" />
+
+            <LinearLayout
+                android:id="@+id/llAppreciations"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:visibility="gone">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvAppreciations"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/item_appreciations">
+                </androidx.recyclerview.widget.RecyclerView>
+
+                <TextView
+                    android:id="@+id/tvEmptyList"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:textStyle="italic"
+                    android:layout_gravity="center"
+                    android:visibility="visible"
+                    android:gravity="center"
+                    android:text="Este servicio aún no tiene valoraciones registradas" />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
