--- a/app/src/main/res/layout/fragment_service.xml
+++ b/app/src/main/res/layout/fragment_service.xml
@@ -11,12 +11,28 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/ibFilterService"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/filter_list"
-            android:layout_gravity="end"/>
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvDeleteFilter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Quitar fltros"
+                android:layout_gravity="start"
+                android:visibility="invisible"
+                android:layout_weight="1"/>
+
+            <ImageButton
+                android:id="@+id/ibFilterService"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/filter_list" />
+        </LinearLayout>
+
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvAllServices"
